[project]
name = "swo-adobe-vimp-extension"
version = "0.1.0"
description = "Adobe VIP Marketplace extension for SWO Marketplace Platform"
authors = [{ name = "SoftwareOne AG" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = {text = "Apache-2.0 license"}
dependencies = [
    "django==4.2.*",
    "jinja2==3.1.*",
    "markdown-it-py==3.0.*",
    "mpt-extension-sdk==5.17.*",
    "openpyxl==3.1.*",
    "phonenumbers==8.13.*",
    "pyairtable==2.3.*",
    "pymsteams==0.2.*",
    "python-dateutil==2.9.*",
    "regex>=2024.7.24,<2025",
    "requests==2.32.*",
    "types-openpyxl==3.1.*",
]

[project.entry-points."swo.mpt.ext"]
app_config = "adobe_vipm.apps:ExtensionConfig"

[dependency-groups]
dev = [
    "flake8-aaa>=0.17.2",
    "flake8-pyproject>=1.2.3",
    "freezegun==1.4.*",
    "ipdb==0.13.*",
    "ipython==8.*",
    "mypy==1.8.*",
    "pre-commit==3.6.*",
    "pytest==7.4.*",
    "pytest-cov==4.1.*",
    "pytest-deadfixtures==2.2.*",
    "pytest-django==4.7.*",
    "pytest-mock==3.12.*",
    "pytest-randomly==3.15.*",
    "pytest-xdist==3.5.*",
    "responses==0.24.*",
    "ruff==0.12.11", # force ruff version to have same formatting everywhere
    "types-openpyxl==3.1.*",
    "types-requests==2.31.*",
    "wemake-python-styleguide==1.3.*",
]
runtime = [
    "azure-monitor-opentelemetry-exporter==1.0.0b25",
    "debugpy==1.8.*",
    "gunicorn==23.0.*",
    "opentelemetry-api==1.30.*",
    "opentelemetry-instrumentation-django==0.51b0",
    "opentelemetry-instrumentation-logging==0.51b0",
    "opentelemetry-instrumentation-requests==0.51b0",
    "opentelemetry-sdk==1.30.*",
    "watchfiles==0.21.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
